<resources>
    <string name="app_name">Run Tracker</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Paramètres</string>
    <string name="Traveled" translatable="false">5.24 Km</string>
    <string name="Objective">Objective de</string>
    <string name="BurnedCalories">Calorie brulée</string>
    <string name="speedHolder" translatable="false">7</string>
    <string name="BurnedCaloriesHolder" translatable="false">168</string>
    <string name="timeHolder" translatable="false">1:58</string>
    <string name="podo">Nombre de pas</string>
    <string name="podoHolder" translatable="false">20258</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="Course">Course</string>
    <string name="historique">Mon historique</string>
    <string name="objectif">Mes objectifs</string>
    <string name="statistiques">Mes Statistiques</string>
    <string name="speed">Vitesse (Km/h)</string>
    <string name="time">Temps (MM:SS)</string>
    <string name="partager">Partager</string>
    <string name="stop">Arreter</string>
    <string name="start">Démarrer</string>
    <string name="distanceVoyagerInitiale" translatable="false">0 KM</string>
    <string name="unite_distance" translatable="false">" KM"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test" translatable="false">Test</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="communication">Social</string>
    <string name="Bike">Bicyclette</string>
    <string name="unite_vitesse" translatable="false">Km/h</string>
    <string name="objectif_intro">Objectif de</string>
    <string name="titre_tableau_distance_semaine">Tableau des distance parcourue durant la dernière semaine (Km)</string>
    <string name="titre_tableau_distance_mois">Tableau des distance parcourue durant le dernier mois (Km)</string>
    <string name="titre_tableau_Temps_semaine">Tableau des temps de course durant la dernière semaine (min)</string>
    <string name="titre_tableau_Temps_mois">Tableau des temps de course durant le dernier mois (min)</string>
    <string name="titre_tableau_Vitesse_semaine">Tableau des vitesse de course durant la dernière semaine (Km/h)</string>
    <string name="titre_tableau_Vitesse_mois">Tableau des vitesse de course durant le dernier mois (Km/h)</string>
    <string name="distance">Distance</string>
    <string name="kmdefault" translatable="false">0.0 Km</string>
    <string name="date_final">Date finale</string>
    <string name="date_default" translatable="false">Dec 9 2015</string>
    <string name="nouvel_objectif">Nouvel objectif</string>
    <string name="titre_pie_chart_objectif">Tableau des objectifs réussi</string>
    <string name="legende_objectif_reussi">Objectif réussi</string>
    <string name="legende_objectif_echouer">Objectif échoué</string>
    <string name="temps">Temps</string>
    <string name="vitesse">Vitesse</string>
    <string name="title_activity_nouvel__objectif">Nouvel_Objectif</string>

    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="zero_initial" translatable="false">0</string>
    <string name="distance_initial" translatable="false">0.00 Km</string>
    <string name="distance_final">Distance final</string>
    <string name="titre_distance_totale">Distance total parcourue :</string>
    <string name="titre_nbr_pied">Nombre de course à pied :</string>
    <string name="titre_nbr_velo">Nombre de course à vélo :</string>
    <string name="titre_nbr_pas">Nombre total de pas :</string>
    <string name="titre_nbr_cal">Nombre total de calories brulée :</string>
    <string name="progression">Progression</string>
    <string name="share_telechargement">Je viens de télécharger la super application \"Run Tracker\"!</string>
    <string name="share_debut">J\'ai parcouru</string>
    <string name="share_fin">Km à l\'aide de la super application \"Run Tracker\"!</string>
    <string name="Erreur">Erreur</string>
</resources>
