<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/Menu_course" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/Course" />
        <item android:id="@+id/Menu_historique" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/historique" />
        <item android:id="@+id/Menu_objectif" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/objectif" />
        <item android:id="@+id/Menu_Statistique" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/statistiques" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="@string/partager" />
        </menu>
    </item>

</menu>