<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context="ca.qc.bdeb.p45.runningtracker.View.ObjectifFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/objectif"
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/distance"
                android:id="@+id/textView5" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_myplaces" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/kmdefault"
                android:id="@+id/Objectif_TexteView_Distance"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/date_final"
                android:id="@+id/textView7"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_my_calendar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/date_default"
                android:id="@+id/Objectif_TexteView_Date"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titre_pie_chart_objectif"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <ImageView
            android:layout_width="15dp"
            android:layout_height="fill_parent"
            android:id="@+id/imageView5"
            android:layout_weight="0"
            android:src="#EE7600" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/legende_objectif_reussi"
            android:id="@+id/textView10"
            android:layout_weight="5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="match_parent"
            android:id="@+id/imageView4"
            android:layout_weight="0"
            android:src="#56B7F1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/legende_objectif_echouer"
            android:id="@+id/textView8"
            android:layout_weight="5" />
    </LinearLayout>

    <org.eazegraph.lib.charts.PieChart
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/Objectif_piechart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="20dp"
        app:egLegendTextSize="18sp"
        android:layout_weight="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nouvel_objectif"
        android:id="@+id/Objectif_Button_new"
        android:layout_weight="0"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
