<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivity_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_marginQuarter"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/MainActivity_layoutTileSpeedCal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin">

            <TextView
                android:id="@+id/MainActivity_lblCaloriesBrule"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/BurnedCalories"
                android:gravity="center"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/MainActivity_CaloriesBrule"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/BurnedCaloriesHolder"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin">

            <TextView
                android:id="@+id/MainActivity_lblSpeed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/speed"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/MainActivity_Speed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/speedHolder"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold|italic" />
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/MainActivity_layoutTileTempPodo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/MainActivity_layoutTileSpeedCal"
        android:paddingTop="@dimen/activity_vertical_marginQuarter"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin">

            <TextView
                android:id="@+id/MainActivity_lblTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:gravity="center"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/MainActivity_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="true"
                android:text="@string/timeHolder"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin">

            <TextView
                android:id="@+id/MainActivity_lblPodo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/podo"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/MainActivity_podo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/podoHolder"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

    </LinearLayout>




</RelativeLayout>
